--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -20,6 +20,9 @@ dependencies:
     git:
       url: https://github.com/google/flutter-desktop-embedding.git
       path: plugins/window_size
+  http: ^0.13.4
+  flutter_secure_storage: ^5.0.2
+  fluttertoast: ^8.0.9
 
 dev_dependencies:
   flutter_lints: ^2.0.1
