--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -23,6 +23,7 @@ dependencies:
   http: ^0.13.4
   flutter_secure_storage: ^5.0.2
   fluttertoast: ^8.0.9
+  provider: ^6.0.0
 
 dev_dependencies:
   flutter_lints: ^2.0.1
