--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -24,6 +24,7 @@ dependencies:
   flutter_secure_storage: ^5.0.2
   fluttertoast: ^8.0.9
   provider: ^6.0.0
+  mqtt_client: ^9.6.8
 
 dev_dependencies:
   flutter_lints: ^2.0.1
