--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -26,6 +26,7 @@ dependencies:
   provider: ^6.0.0
   mqtt_client: ^9.6.8
   virtual_keyboard_multi_language: ^1.0.3
+  flutter_conditional_rendering: ^2.0.0
 
 dev_dependencies:
   flutter_lints: ^2.0.1
