--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -27,6 +27,7 @@ dependencies:
   mqtt_client: ^9.6.8
   virtual_keyboard_multi_language: ^1.0.3
   flutter_conditional_rendering: ^2.0.0
+  localstorage: ^4.0.0+1
 
 dev_dependencies:
   flutter_lints: ^2.0.1
